// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders properly with color prop 1`] = `
<button
  className="sc-bdVaJa iVPjYN"
  color="lemonchiffon"
>
  whatup
</button>
`;

exports[`Button Component renders properly with hollow prop 1`] = `
<button
  className="sc-bdVaJa bbdLtm"
  color="#556285"
>
  whatup
</button>
`;
